tested api and list view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Hacker News App</string>
+    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad atque aut consectetur culpa cumque distinctio ex explicabo iste necessitatibus nesciunt nulla, numquam odio odit pariatur porro, quam quidem recusandae similique veritatis! Accusamus amet aspernatur cumque cupiditate eligendi eum facere, incidunt, optio placeat provident quis reprehenderit sit voluptates. Enim nostrum officiis possimus quidem sapiente sint sunt tempora vitae? Accusantium doloribus fuga nihil rerum? Accusamus dolore eum ipsa neque nulla quaerat quis quo temporibus voluptatum. Assumenda consequatur cumque debitis dicta eveniet sunt ullam? Dignissimos in, voluptatum. Assumenda et iure nobis odio, omnis quam temporibus veritatis! Aut illum laboriosam quae saepe temporibus!</string>
 </resources>
